# ROS2_JuanMa

./: .gitignore  README.md
Act_3.3/puzzlebot_description/: package.xml
Act_3.3/puzzlebot_description/launch/: puzzlebot_description.launch.xml
Act_3.3/puzzlebot_description/urdf/: base.xacro  gazebo_plugins.xacro  inertias.xacro  puzzlebot.urdf.xacro  sensors.xacro  wheels.xacro
Act_3.3/puzzlebot_gazebo/: CMakeLists.txt
Act_3.3/puzzlebot_gazebo/config/: gazebo_bridge.yaml
Act_3.3/puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch.xml
Act_3.3/puzzlebot_navigation2/config/: nav2_params.yaml
Act_3.3/puzzlebot_navigation2/launch/: nav2.launch.xml  slam.launch.py  slam_core.launch.xml
PROJECT/puzzlebot_description/urdf/: puzzlebot.xacro  (+1 more)
puzzlebot_description/: CMakeLists.txt  package.xml
puzzlebot_description/launch/: puzzlebot_description.launch.xml
puzzlebot_gazebo/: CMakeLists.txt  package.xml
puzzlebot_gazebo/config/: gazebo_bridge.yaml
puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch.xml
puzzlebot_gazebo/worlds/: maze.world
puzzlebot_navigation/: CMakeLists.txt
puzzlebot_navigation/config/: nav2_params.yaml
puzzlebot_navigation/launch/: nav2_core.launch.xml  slam.launch.xml  slam_core.launch.xml
puzzlebot_navigation2/: CMakeLists.txt  package.xml
puzzlebot_navigation2/config/: nav2_params.yaml  slam_toolbox.yaml
puzzlebot_navigation2/launch/: nav2.launch.py  nav2.launch.xml  slam.launch.py  slam.launch.xml  slam_core.launch.xml
puzzlebot_navigation2/maps/: map_maze.pgm  map_maze.yaml
puzzlebot_navigation2/rviz/: slam.rviz
(+15 files in other folders)
