<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ronysantillan@hotmail.com">edgarroann</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Nav2 -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
 
  <!-- SLAM Toolbox -->
  <exec_depend>slam_toolbox</exec_depend>
 
  <!-- RViz2 -->
  <exec_depend>rviz2</exec_depend>
 
  <!-- Teleop -->
  <exec_depend>teleop_twist_keyboard</exec_depend>
 
  <!-- Gazebo / Robot description (Puzzlebot) -->
  <exec_depend>puzzlebot_gazebo</exec_depend>
 
  <!-- Launch system -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
